# TwiFecth-OMP

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.29d6546  README.md
include/: Sentiment.h  TweetFetcher.h  misc.h  misc.h.autosave
src/: Sentiment.cpp  TweetFetcher.cpp  analyze_sentiment.pyx  example.cpp  misc.cpp  sentiment_analysis.c
src/python/: sentiment_analysis.py  sentiment_analysis.pyx  setup.py
